src/test/deca/context/invalid/sansObj/multi-string.deca
// Description:
//    Multiplication d'un int et d'un string
//
// Résultat:
//Opération entre 2 objets de types incompatibles

{
   int a;
   a = a * "non-nombre";
}